@@ -1,3 +1,7 @@
+2007-12-03  Douglas S.Blank  <dblank@cs.brynmawr.edu>
+	* src/plugins/CalculateEstimatedDates.py: Refinements, use results tab
+	* src/PluginUtils/_PluginWindows.py: Tool support for a results tab
+
 2007-12-02  Douglas S.Blank  <dblank@cs.brynmawr.edu>
 	* src/gen/lib/date.py: added new method copy_ymd()
 	* src/plugins/CalculateEstimatedDates.py: new tool based on 
